--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,12 +24,6 @@ code {
 .app {
 	height: 100%;
 	width: 100%;
-}
-
-.container {
-	max-width: 1100px;
-	width: 100%;
-	margin: 0 auto;
 }
 
 .page {
